@@ -1,3 +1,8 @@
+* Mon Mar 15 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.1-0
+- Fixed packages lists.
+- Fixed screensaver logic
+- gconf type was not getting values correctly
+
 * Tue Feb 21 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.0.1-0
 - Added check for gdm_version before it's used
 
